--- a/notebooks/featurestore/FeaturestoreTourScala.ipynb
+++ b/notebooks/featurestore/FeaturestoreTourScala.ipynb
@@ -86,7 +86,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>10</td><td>application_1587142366063_0012</td><td>spark</td><td>idle</td><td><a target=\"_blank\" href=\"http://resourcemanager.service.consul:8088/proxy/application_1587142366063_0012/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e01_1587142366063_0012_01_000001/demo_featurestore_admin000__meb10000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>81</td><td>application_1598227897403_0046</td><td>spark</td><td>idle</td><td><a target=\"_blank\" href=\"http://resourcemanager.service.consul:8088/proxy/application_1598227897403_0046/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e02_1598227897403_0046_01_000001/demo_featurestore_admin000__meb10000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -2070,7 +2070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -2091,7 +2091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -2101,11 +2101,11 @@
       "+--------------+-------------+------------+--------------+----------------+-----------+-----------------+--------------------+------------------+------------------+----------------+---------------------+\n",
       "|sum_attendance|team_position|sum_position|sum_player_age|sum_player_worth|team_budget|sum_player_rating|average_player_worth|average_player_age|average_attendance|average_position|average_player_rating|\n",
       "+--------------+-------------+------------+--------------+----------------+-----------+-----------------+--------------------+------------------+------------------+----------------+---------------------+\n",
-      "|      71750.03|           31|      1188.0|        2463.0|        23187.08|  12514.562|        24030.572|            231.8708|             24.63|         3587.5015|            59.4|            240.30573|\n",
-      "|     50643.277|           34|      1213.0|        2571.0|       22371.338|  1587.0897|        24039.303|           223.71338|             25.71|         2532.1638|           60.65|            240.39302|\n",
-      "|      67956.13|           28|      1072.0|        2563.0|       28011.465|  3839.0754|        29792.936|           280.11465|             25.63|         3397.8066|            53.6|            297.92935|\n",
-      "|      65438.68|           26|      1103.0|        2565.0|       30787.268|  16758.066|        32269.797|           307.87268|             25.65|          3271.934|           55.15|            322.69797|\n",
-      "|      81496.09|           27|      1142.0|        2550.0|       29878.234|  3966.3591|        29779.197|           298.78235|              25.5|         4074.8047|            57.1|            297.79196|\n",
+      "|     391919.47|            6|       563.0|        2485.0|       143524.64|    7307.94|        131123.84|           1435.2465|             24.85|         19595.973|           28.15|            1311.2384|\n",
+      "|     129249.24|           16|       841.0|        2545.0|       57687.785|   7326.092|         50224.14|           576.87787|             25.45|          6462.462|           42.05|             502.2414|\n",
+      "|     144533.44|           20|       821.0|        2540.0|       41708.723|   3555.235|         37234.58|           417.08722|              25.4|          7226.672|           41.05|             372.3458|\n",
+      "|      63796.91|           40|      1266.0|        2591.0|       19934.621|  910.39325|        22629.305|            199.3462|             25.91|         3189.8455|            63.3|            226.29305|\n",
+      "|     99292.945|           23|      1100.0|        2663.0|       31547.941|  10290.323|        32760.031|            315.4794|             26.63|         4964.6475|            55.0|             327.6003|\n",
       "+--------------+-------------+------------+--------------+----------------+-----------+-----------------+--------------------+------------------+------------------+----------------+---------------------+\n",
       "only showing top 5 rows\n",
       "\n"
@@ -2125,15 +2125,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "latestVersion: Integer = 0\n",
-      "res59: Integer = 0\n"
+      "latestVersion: Integer = 3\n",
+      "res3: Integer = 3\n"
      ]
     }
    ],
@@ -2151,14 +2151,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "res60: Integer = 0\n"
+      "res4: Integer = 3\n"
      ]
     }
    ],
@@ -2203,6 +2203,41 @@
    "outputs": [],
    "source": [
     "Hops.createTrainingDataset(\"team_position_prediction\").setDataframe(featuresDf).setSpark(spark).setFeaturestore(Hops.getProjectFeaturestore.read()).setVersion(2).setDescription(\"a dataset with features for football teams, used for training a model to predict league-position\").setDataFormat(\"tfrecords\").setDescriptiveStats(false).setFeatureCorr(false).setFeatureHistograms(false).setClusterAnalysis(false).setStatColumns(statColumns).setNumBins(5).setCorrMethod(\"pearson\").setNumClusters(5).write()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Save as Training Dataset in TFRecord Format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Hops.createTrainingDataset(\"team_position_prediction_tfrecord\").setDataframe(featuresDf).setDataFormat(\"tfrecord\").setDescription(\"a dataset with features for football teams, used for training a model to predict league-position\").write\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "latestVersion: Integer = 1\n",
+      "res6: Integer = 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "val latestVersion = Hops.getLatestTrainingDatasetVersion(\"team_position_prediction_tfrecord\").setFeaturestore(Hops.getProjectFeaturestore.read).read\n",
+    "latestVersion"
    ]
   },
   {
@@ -2269,6 +2304,15 @@
     "Once a dataset have been created, its metadata is browsable in the featurestore registry in the Hopsworks UI. If you don't want to create a new training dataset but just overwrite or insert new data into an existing training dataset, you can use the API function `insertIntoTrainingDataset`.  \n",
     "\n",
     "**Note**: \"append\" write mode is not supported for training datasets stored in tfrecords format, only \"overwrite\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Hops.insertIntoTrainingDataset(\"team_position_prediction_tfrecord\").setDataframe(featuresDf).setMode(\"append\").write"
    ]
   },
   {
