[HOPSWORKS-1994] Add example with TensorFlow profiling and custom image returned in wrapper

--- a/notebooks/ml/Experiment/Tensorflow/mnist.ipynb
+++ b/notebooks/ml/Experiment/Tensorflow/mnist.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,11 +100,14 @@
     "    from tensorflow.keras import backend as K\n",
     "\n",
     "    import math\n",
-    "    from hops import tensorboard\n",
+    "    \n",
+    "    from hops import tensorboard    \n",
+    "    from hops import model as hopsworks_model\n",
     "\n",
-    "    batch_size = 8\n",
+    "    batch_size = 32\n",
     "    num_classes = 10\n",
-    "    epochs = 3\n",
+    "    epochs = 10\n",
+    "    steps_per_epoch = 10\n",
     "    kernel = 4\n",
     "    pool = 4\n",
     "    dropout = 0.5\n",
@@ -155,19 +158,24 @@
     "                      metrics=['accuracy'])\n",
     "\n",
     "    tb_callback = TensorBoard(log_dir=tensorboard.logdir(), histogram_freq=0,\n",
-    "                             write_graph=True, write_images=True)\n",
+    "                             write_graph=True, write_images=True, profile_batch='5,10')\n",
     "    callbacks = [tb_callback]\n",
     "\n",
     "    model.fit(x_train, y_train,\n",
     "             batch_size=batch_size,\n",
     "             callbacks=callbacks,\n",
     "             epochs=epochs,\n",
+    "             steps_per_epoch=steps_per_epoch,\n",
     "             verbose=1,\n",
     "             validation_data=(x_test, y_test))\n",
-    "    score = model.evaluate(x_test, y_test, verbose=0)\n",
+    "    \n",
+    "    score = model.evaluate(x_test, y_test, \n",
+    "                           verbose=0, \n",
+    "                           batch_size=10, \n",
+    "                           steps=10)\n",
     "\n",
     "    # Export model as savedModel\n",
-    "    export_path = tensorboard.logdir() + \"/SavedModel\"\n",
+    "    export_path = tensorboard.logdir() + '/SavedModel'\n",
     "\n",
     "    tf.keras.models.save_model(\n",
     "        model,\n",
@@ -179,12 +187,16 @@
     "        options=None\n",
     "    )\n",
     "    \n",
-    "    return {'accuracy': score[1], 'loss': score[0]}"
+    "    metrics = {'accuracy': score[1], 'loss': score[0]}\n",
+    "    \n",
+    "    hopsworks_model.export(export_path, 'mnist', metrics=metrics)\n",
+    "    \n",
+    "    return metrics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +205,7 @@
      "text": [
       "Finished Experiment \n",
       "\n",
-      "('hdfs://rpc.namenode.service.consul:8020/Projects/demo/Experiments/application_1594231828166_0164_3', {'accuracy': 0.9853000044822693, 'loss': 0.04326099157333374, 'log': 'Experiments/application_1594231828166_0164_3/output.log'})"
+      "('hdfs://rpc.namenode.service.consul:8020/Projects/demo_deep_learning_admin000/Experiments/application_1598535004204_0010_4', {'accuracy': 0.9200000166893005, 'loss': 0.34505602717399597, 'log': 'Experiments/application_1598535004204_0010_4/output.log'})"
      ]
     }
    ],
@@ -203,13 +215,6 @@
     "\n",
     "experiment.launch(keras_mnist, name='keras mnist', local_logdir=True, metric_key='accuracy')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
