--- a/notebooks/ml/Experiment/PyTorch/mnist.ipynb
+++ b/notebooks/ml/Experiment/PyTorch/mnist.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,12 @@
     "    import os\n",
     "    from hops import tensorboard\n",
     "    from hops import hdfs\n",
-    "\n",
+    "    import matplotlib.pyplot as plt\n",
+    "    from matplotlib.ticker import MaxNLocator\n",
+    "    \n",
+    "    \n",
+    "    train_acc = []\n",
+    "    test_acc = []\n",
     "\n",
     "    class Net(nn.Module):\n",
     "        def __init__(self):\n",
@@ -118,6 +123,8 @@
     "\n",
     "    def train(model, device, train_loader, optimizer, writer):\n",
     "        model.train()\n",
+    "        correct = 0\n",
+    "        test_loss = 0\n",
     "        for batch_idx, (data, target) in enumerate(train_loader):\n",
     "            data, target = data.to(device), target.to(device)\n",
     "            optimizer.zero_grad()\n",
@@ -125,12 +132,15 @@
     "            loss = F.nll_loss(output, target)\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
+    "            pred = output.argmax(dim=1, keepdim=True) # get the index of the max log-probability\n",
+    "            correct += pred.eq(target.view_as(pred)).sum().item()\n",
     "            if batch_idx % 10 == 0:\n",
     "                print('[{}/{} ({:.0f}%)]\\tLoss: {:.6f}'.format(\n",
     "                    batch_idx * len(data), len(train_loader.dataset),\n",
     "                    100. * batch_idx / len(train_loader), loss.item()))\n",
     "                writer.add_scalar('Loss/train', loss.item(), batch_idx)\n",
-    "\n",
+    "        train_acc.append(correct/len(train_loader.dataset))\n",
+    "        \n",
     "    def test(model, device, test_loader):\n",
     "        model.eval()\n",
     "        test_loss = 0\n",
@@ -142,13 +152,12 @@
     "                test_loss += F.nll_loss(output, target, reduction='sum').item() # sum up batch loss\n",
     "                pred = output.argmax(dim=1, keepdim=True) # get the index of the max log-probability\n",
     "                correct += pred.eq(target.view_as(pred)).sum().item()\n",
-    "\n",
     "        test_loss /= len(test_loader.dataset)\n",
     "\n",
     "        print('\\nTest set: Average loss: {:.4f}, Accuracy: {}/{} ({:.0f}%)\\n'.format(\n",
     "            test_loss, correct, len(test_loader.dataset),\n",
     "            100. * correct / len(test_loader.dataset)))\n",
-    "\n",
+    "        test_acc.append(correct/len(test_loader.dataset))\n",
     "\n",
     "    # Training settings\n",
     "    use_cuda = torch.cuda.is_available()\n",
@@ -182,16 +191,53 @@
     "                       ])),\n",
     "        batch_size=1000, shuffle=True, **kwargs)\n",
     "\n",
-    "\n",
     "    model = Net().to(device)\n",
     "    optimizer = optim.SGD(model.parameters(), lr=0.01, momentum=0.5)\n",
     "\n",
     "    #Single epoch\n",
-    "    train(model, device, train_loader, optimizer, writer)\n",
-    "    test(model, device, test_loader)\n",
+    "    epochs = range(1,3)\n",
+    "    for i in epochs:\n",
+    "        train(model, device, train_loader, optimizer, writer)\n",
+    "        test(model, device, test_loader)\n",
     "\n",
+    "    torch.save(model.state_dict(), tensorboard.logdir() + \"mnist_cnn.pt\")\n",
     "\n",
-    "    torch.save(model.state_dict(), tensorboard.logdir() + \"mnist_cnn.pt\")\n"
+    "    # Data\n",
+    "    data = {'Epoch': epochs, 'Train': train_acc, 'Test': test_acc}\n",
+    "\n",
+    "    # multiple line plot\n",
+    "    ax = plt.figure().gca()\n",
+    "    ax.xaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "\n",
+    "    plt.plot('Epoch', 'Train', data=data, marker='o', markerfacecolor='black', markersize=8, color='blue', linewidth=3)\n",
+    "    plt.plot('Epoch', 'Test', data=data, marker='o', markerfacecolor='black', markersize=8, color='purple', linewidth=3)\n",
+    "    plt.ylabel('Accuracy')\n",
+    "    plt.xlabel('Epoch')\n",
+    "    plt.legend()\n",
+    "    plt.savefig('train_summary.png')\n",
+    "    \n",
+    "    return {'accuracy': test_acc[-1:], 'train_summary': 'train_summary.png'}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished Experiment \n",
+      "\n",
+      "('hdfs://rpc.namenode.service.consul:8020/Projects/demo_deep_learning_admin000/Experiments/application_1598535004204_0011_3', {'accuracy': [0.9826], 'train_summary': 'Experiments/application_1598535004204_0011_3/train_summary.png', 'log': 'Experiments/application_1598535004204_0011_3/output.log'})"
+     ]
+    }
+   ],
+   "source": [
+    "from hops import experiment\n",
+    "# Simple experiment, local_logdir=True to write to local FS and not HDFS (Look in Experiments dataset for contents after experiment)\n",
+    "experiment.launch(wrapper, local_logdir=True)"
    ]
   },
   {
@@ -199,27 +245,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from hops import experiment\n",
-    "# Simple experiment, local_logdir=True to write to local FS and not HDFS (Look in Experiments dataset for contents after experiment)\n",
-    "experiment.launch(wrapper, local_logdir=True)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
    "display_name": "PySpark",
-   "language": "",
+   "language": "python",
    "name": "pysparkkernel"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "python",
-    "version": 2
+    "version": 3
    },
    "mimetype": "text/x-python",
    "name": "pyspark",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "python3"
   }
  },
  "nbformat": 4,
