Redshift FeatureStore example

--- a/notebooks/featurestore/aws/redshift/churn/Get_Started_Setup.ipynb
+++ b/notebooks/featurestore/aws/redshift/churn/Get_Started_Setup.ipynb
@@ -115,7 +115,7 @@
     " &nbsp; <b>Note:</b> depending what type of driver you use need to replace <u>driver_name</u> accordingly. <br>\n",
     " &nbsp;&nbsp;&nbsp; <b>If you use psycopg2 library then your connection string will be:</b> <br> \n",
     " &nbsp;&nbsp;&nbsp; redshift+psycopg2://username:password@redshift_url:5439/databasename <br>\n",
-    " &nbsp;&nbsp;&nbsp; <b>for redshift jdbc driver it use following:</b> <br>\n",
+    " &nbsp;&nbsp;&nbsp; <b>for redshift jdbc driver use following:</b> <br>\n",
     " &nbsp;&nbsp;&nbsp; jdbc:redshift://redshift_url:5439/databasename?user=username&password=password <br>\n",
     " &nbsp;&nbsp;&nbsp; <b>for redshift jdbc driver using IAM as authenticating method (follow instructions [Alternative 2 - access with IAM role](#iam_role)) use following:</b> <br>\n",
     " &nbsp;&nbsp;&nbsp; jdbc:redshift:iam://redshift_url:5439/databasename <br>\n",
