update maggy notebooks

--- a/notebooks/ml/Parallel_Experiments/Maggy/maggy-fashion-mnist-example.ipynb
+++ b/notebooks/ml/Parallel_Experiments/Maggy/maggy-fashion-mnist-example.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## maggy - MNIST Example\n",
     "---\n",
-    "Updated: 27/04/2020"
+    "Updated: 04/09/2020"
    ]
   },
   {
@@ -19,7 +19,7 @@
     "\n",
     "We are using Keras for this example to build the model.\n",
     "\n",
-    "This notebook has been tested with TensorFlow 2.2.0 and Hopsworks 1.3.\n",
+    "This notebook has been tested with TensorFlow 2.2.0 and Hopsworks 1.4.\n",
     "Requires Python 3.6 or higher."
    ]
   },
@@ -53,7 +53,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>70</td><td>application_1594231828166_0157</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://resourcemanager.service.consul:8088/proxy/application_1594231828166_0157/\">Link</a></td><td><a target=\"_blank\" href=\"http://sn021.dli.zenuity.com:8042/node/containerlogs/container_e08_1594231828166_0157_01_000001/demo__davit000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>13</td><td>application_1599221100834_0013</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8088/proxy/application_1599221100834_0013/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e02_1599221100834_0013_01_000001/demo_deep_learning_admin000__meb10000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,205 +293,24 @@
     "5. `num_trials`: number of different parameter combinations to be evaluated\n",
     "6. `name`: an experiment name\n",
     "7. `hb_interval`: Time in seconds between the heartbeat messages with the metric to the experiment driver. A sensible value is not much smaller than the frequency in which your training loop updates the metric. So using the KerasBatchEnd reporter callback, it does not make sense having a much smaller interval than the amount of time a batch takes to be processed.\n",
-    "8. `es_interval`: Interval in seconds, specifying how often the currently running trials should be checked for early stopping. Should be bigger than the `hb_interval`.\n",
+    "8. `es_interval`: Interval in steps, specifying how often the currently running trials should be checked for early stopping. Defaults to 1, e.g. if the KerasBatchCallback is used, it will check every trial after each Batch if it should be early stopped.\n",
     "9. `es_min`: Minimum number of trials to be finished before starting to check for early stopping. For example, the median stopping rule implements the simple strategy of stopping a trial if its performance falls below the median of finished trials at similar points in time. We only want to start comparing to the median once there are several trials finished."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6a438155ad39454a9380fe93ae7f12ae",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='Maggy experiment', max=15.0, style=ProgressStyle(descript…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0: Epoch 1/10\n",
-      "0: \n",
-      "0: \n",
-      "0: \n",
-      "0: \n",
-      "0: Epoch 2/10\n",
-      "0: Epoch 3/10\n",
-      "0: Epoch 4/10\n",
-      "0: Epoch 5/10\n",
-      "0: Epoch 6/10\n",
-      "0: Epoch 7/10\n",
-      "0: Epoch 8/10\n",
-      "0: Epoch 9/10\n",
-      "0: Epoch 10/10\n",
-      "0: Test loss: 0.3839288353919983\n",
-      "0: Test accuracy: 0.8585069179534912\n",
-      "0: Epoch 1/10\n",
-      "0: Epoch 2/10\n",
-      "0: Epoch 3/10\n",
-      "0: Epoch 4/10\n",
-      "0: Epoch 5/10\n",
-      "0: Epoch 6/10\n",
-      "0: Epoch 7/10\n",
-      "0: Epoch 8/10\n",
-      "0: Epoch 9/10\n",
-      "0: Epoch 10/10\n",
-      "0: Test loss: 0.35082095861434937\n",
-      "0: Test accuracy: 0.8669704794883728\n",
-      "0: Epoch 1/10\n",
-      "0: Epoch 2/10\n",
-      "0: Epoch 3/10\n",
-      "0: Epoch 4/10\n",
-      "0: Epoch 5/10\n",
-      "0: Epoch 6/10\n",
-      "0: Epoch 7/10\n",
-      "0: Epoch 8/10\n",
-      "0: Epoch 9/10\n",
-      "0: Epoch 10/10\n",
-      "0: Test loss: 1.6520566940307617\n",
-      "0: Test accuracy: 0.5049912929534912\n",
-      "0: Epoch 1/10\n",
-      "0: Epoch 2/10\n",
-      "0: Epoch 3/10\n",
-      "0: Epoch 4/10\n",
-      "0: Epoch 5/10\n",
-      "0: Epoch 6/10\n",
-      "0: Epoch 7/10\n",
-      "0: Epoch 8/10\n",
-      "0: Epoch 9/10\n",
-      "0: Epoch 10/10\n",
-      "0: Test loss: 0.2847115993499756\n",
-      "0: Test accuracy: 0.8956162929534912\n",
-      "0: Epoch 1/10\n",
-      "0: Epoch 2/10\n",
-      "0: Epoch 3/10\n",
-      "0: Epoch 4/10\n",
-      "0: Epoch 5/10\n",
-      "0: Epoch 6/10\n",
-      "0: Epoch 7/10\n",
-      "0: Epoch 8/10\n",
-      "0: Epoch 9/10\n",
-      "0: Epoch 10/10\n",
-      "0: Test loss: 0.2887480854988098\n",
-      "0: Test accuracy: 0.8914930820465088\n",
-      "0: Epoch 1/10\n",
-      "0: Epoch 2/10\n",
-      "0: Epoch 3/10\n",
-      "0: Epoch 4/10\n",
-      "0: Epoch 5/10\n",
-      "0: Epoch 6/10\n",
-      "0: Epoch 7/10\n",
-      "0: Epoch 8/10\n",
-      "0: Epoch 9/10\n",
-      "0: Epoch 10/10\n",
-      "0: Test loss: 0.35841038823127747\n",
-      "0: Test accuracy: 0.8643662929534912\n",
-      "0: Epoch 1/10\n",
-      "0: Epoch 2/10\n",
-      "0: Epoch 3/10\n",
-      "0: Epoch 4/10\n",
-      "0: Epoch 5/10\n",
-      "0: Epoch 6/10\n",
-      "0: Epoch 7/10\n",
-      "0: Epoch 8/10\n",
-      "0: Epoch 9/10\n",
-      "0: Epoch 10/10\n",
-      "0: Test loss: 0.258556067943573\n",
-      "0: Test accuracy: 0.9055989384651184\n",
-      "0: Epoch 1/10\n",
-      "0: Epoch 2/10\n",
-      "0: Epoch 1/10\n",
-      "0: Epoch 2/10\n",
-      "0: Epoch 3/10\n",
-      "0: Epoch 4/10\n",
-      "0: Epoch 5/10\n",
-      "0: Epoch 6/10\n",
-      "0: Epoch 7/10\n",
-      "0: Epoch 8/10\n",
-      "0: Epoch 9/10\n",
-      "0: Epoch 10/10\n",
-      "0: Test loss: 0.24740640819072723\n",
-      "0: Test accuracy: 0.9088541865348816\n",
-      "0: Epoch 1/10\n",
-      "0: Epoch 2/10\n",
-      "0: Epoch 1/10\n",
-      "0: Epoch 2/10\n",
-      "0: Epoch 1/10\n",
-      "0: Epoch 2/10\n",
-      "0: Epoch 1/10\n",
-      "0: Epoch 2/10\n",
-      "0: Epoch 3/10\n",
-      "0: Epoch 4/10\n",
-      "0: Epoch 5/10\n",
-      "0: Epoch 6/10\n",
-      "0: Epoch 7/10\n",
-      "0: Epoch 8/10\n",
-      "0: Epoch 9/10\n",
-      "0: Epoch 10/10\n",
-      "0: Test loss: 0.30597394704818726\n",
-      "0: Test accuracy: 0.8871527910232544\n",
-      "0: Epoch 1/10\n",
-      "0: Epoch 2/10\n",
-      "0: Epoch 3/10\n",
-      "0: Epoch 4/10\n",
-      "0: Epoch 5/10\n",
-      "0: Epoch 6/10\n",
-      "0: Epoch 7/10\n",
-      "0: Epoch 8/10\n",
-      "0: Epoch 9/10\n",
-      "0: Epoch 10/10\n",
-      "0: Test loss: 0.28581172227859497\n",
-      "0: Test accuracy: 0.8962673544883728\n",
-      "0: Epoch 1/10\n",
-      "0: Epoch 2/10\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "An error was encountered:\n",
-      "Could not create experiment (url: /hopsworks-api/api/project/128/experiments/application_1594231828166_0157_3?xattr=REPLACE), server response: \n",
-      " HTTP code: 401, HTTP reason: Unauthorized, error code: 200003, error msg: The Token has expired on Tue Jul 14 20:31:14 CEST 2020., user msg: \n",
-      "Traceback (most recent call last):\n",
-      "  File \"/srv/hops/anaconda/envs/theenv/lib/python3.6/site-packages/maggy/experiment.py\", line 239, in lagom\n",
-      "    optimization_key,\n",
-      "  File \"/srv/hops/anaconda/envs/theenv/lib/python3.6/site-packages/maggy/util.py\", line 121, in _finalize_experiment\n",
-      "    app_id, run_id, experiment_json, \"REPLACE\"\n",
-      "  File \"/srv/hops/anaconda/envs/theenv/lib/python3.6/site-packages/hops/experiment_impl/util/experiment_utils.py\", line 455, in _attach_experiment_xattr\n",
-      "    resource_url, response.status_code, response.reason, error_code, error_msg, user_msg))\n",
-      "hops.exceptions.RestAPIError: Could not create experiment (url: /hopsworks-api/api/project/128/experiments/application_1594231828166_0157_3?xattr=REPLACE), server response: \n",
-      " HTTP code: 401, HTTP reason: Unauthorized, error code: 200003, error msg: The Token has expired on Tue Jul 14 20:31:14 CEST 2020., user msg: \n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "result = experiment.lagom(map_fun=training_function, \n",
+    "result = experiment.lagom(train_fn=training_function, \n",
     "                           searchspace=sp, \n",
     "                           optimizer='randomsearch', \n",
     "                           direction='max',\n",
     "                           num_trials=15, \n",
     "                           name='MNIST', \n",
-    "                           hb_interval=5, \n",
-    "                           es_interval=5,\n",
+    "                           hb_interval=1, \n",
+    "                           es_interval=1,\n",
     "                           es_min=5\n",
     "                          )"
    ]
