--- a/notebooks/ml/Parallel_Experiments/Maggy/maggy-ablation-titanic-example.ipynb
+++ b/notebooks/ml/Parallel_Experiments/Maggy/maggy-ablation-titanic-example.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Last Updated: 2020/04/29* </br>\n",
+    "*Last Updated: 2020/09/04* </br>\n",
     "*Created: 2019/10/14*\n",
     "\n",
     "In this notebook, we demonstrate Maggy's Ablation API, while using a TensorFlow Keras Sequential model trained on the [Titanic Dataset](https://www.kaggle.com/c/titanic/data). To be able to follow along, make sure you have the Titanic training dataset registered on your Project's Feature Store, as explained [in this example notebook](https://github.com/logicalclocks/hops-examples/blob/master/notebooks/featurestore/datasets/TitanicTrainingDatasetPython.ipynb).\n",
@@ -28,7 +28,7 @@
     "\n",
     "We can think that an ablation study is an *experiment* that consists of several *trials*. For example, each model ablation trial involves training a model with one or more of its components (e.g. a layer) removed. Similarly, a feature ablation trial involves training a model using a different set of dataset features, and observing the outcomes.\n",
     "\n",
-    "![image.png](images/ablation-feature-vs-model.png)\n",
+    "![ablation-feature-vs-model.png](../../images/ablation-feature-vs-model.png)\n",
     "\n",
     "The image above shows a sample feature ablation trial (up) and a sample layer ablation trial (down). For example, in the sample layer ablation trial, we remove the last hidden layer from the base model, train the resulting model, and observe its accuracy."
    ]
@@ -79,7 +79,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>5</td><td>application_1586184410703_0006</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8088/proxy/application_1586184410703_0006/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e01_1586184410703_0006_01_000001/maggy_dev__meb10000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>9</td><td>application_1599221100834_0009</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8088/proxy/application_1599221100834_0009/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e02_1599221100834_0009_01_000001/demo_deep_learning_admin000__meb10000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -407,12 +407,12 @@
     "    batch_size = 10\n",
     "    tf_dataset = dataset_function(epochs, batch_size)\n",
     "    model = model_function()\n",
-    "    model.compile(optimizer=tf.train.AdamOptimizer(0.001),\n",
+    "    model.compile(optimizer=tf.keras.optimizers.Adam(0.001),\n",
     "             loss='binary_crossentropy',\n",
     "             metrics=['accuracy'])\n",
     "    \n",
     "    history = model.fit(tf_dataset, epochs=5, steps_per_epoch=30, verbose=0)\n",
-    "    return float(history.history['acc'][-1])"
+    "    return float(history.history['accuracy'][-1])"
    ]
   },
   {
@@ -429,66 +429,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a92031ec4b40415fb8d6ce0337561f89",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='Maggy experiment', max=11.0, style=ProgressStyle(descript…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Started Maggy Experiment: Titanic-LOCO, application_1586184410703_0006, run 1\n",
-      "\n",
-      "------ LOCO Results ------ \n",
-      "BEST Config Excludes {\"ablated_feature\": \"None\", \"ablated_layer\": \"['my_dense_four', 'my_dense_two']\"} -- metric 0.7233333587646484\n",
-      "WORST Config Excludes {\"ablated_feature\": \"None\", \"ablated_layer\": \"Layers prefixed my_dense\"} -- metric 0.3866666555404663\n",
-      "AVERAGE metric -- 0.6309090906923468\n",
-      "Total Job Time 0 hours, 2 minutes, 36 seconds\n",
-      "\n",
-      "Finished Experiment\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# launch the experiment\n",
     "\n",
-    "result = experiment.lagom(map_fun=training_fn, experiment_type='ablation',\n",
+    "result = experiment.lagom(train_fn=training_fn, experiment_type='ablation',\n",
     "                           ablation_study=ablation_study, \n",
     "                           ablator='loco', \n",
     "                           name='Titanic-LOCO'\n",
     "                          )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
    "display_name": "PySpark",
-   "language": "",
+   "language": "python",
    "name": "pysparkkernel"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "python",
-    "version": 2
+    "version": 3
    },
    "mimetype": "text/x-python",
    "name": "pyspark",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "python3"
   }
  },
  "nbformat": 4,
