--- a/notebooks/featurestore/Snowflake/Get_Started_Setup.ipynb
+++ b/notebooks/featurestore/Snowflake/Get_Started_Setup.ipynb
@@ -105,9 +105,9 @@
    "metadata": {},
    "source": [
     "## Spark\n",
-    "#### Step 1: Attached snowflake-jdbc-3.12.8.jar to the cluster.\n",
+    "#### Step 1: Attache snowflake-jdbc-3.12.8.jar to the cluster.\n",
     "#### https://mvnrepository.com/artifact/net.snowflake/snowflake-jdbc/3.12.8\n",
-    "#### Step 3: Attached spark-snowflake_2.11-2.8.1 driver to the cluster.\n",
+    "#### Step 2: Attache spark-snowflake_2.11-2.8.1 driver to the cluster.\n",
     "#### https://mvnrepository.com/artifact/net.snowflake/spark-snowflake_2.11/2.8.1-spark_2.4"
    ]
   },
