--- a/notebooks/featurestore/Snowflake/Get_Started_Setup.ipynb
+++ b/notebooks/featurestore/Snowflake/Get_Started_Setup.ipynb
@@ -7,12 +7,7 @@
     "# Get started with Snowflake and the Hopsworks Feature Store\n",
     "This tutorial notebook will help you to get started working with the Hopsworks feature store and Snowflake.\n",
     "\n",
-    "- We assume that you already have snowflake account. If not please follow the [tutorial](https://www.snowflake.com/webinar/virtual-hands-on-labs/virtual-hands-on-lab-2020-03-18/) to setup your Snowflake account and load telcom churn dataset   \n",
-    "\n",
-    "\n",
-    "## [Access Snowflake from Hopsworks](#access_snowflake)\n",
-    "\n",
-    "### [Create Snowflake connector in Hopsworks ](#jdbc_connector)"
+    "- We assume that you already have snowflake account. If not please follow the [tutorial](https://www.snowflake.com/webinar/virtual-hands-on-labs/virtual-hands-on-lab-2020-03-18/) to setup your Snowflake account and load telcom churn dataset   "
    ]
   },
   {
